# kmachine

./: Cargo.toml  README.md
asm/: Cargo.toml
asm/src/: att.pest  att.rs  lib.rs
attasm/: Cargo.toml
attasm/src/: lib.rs
attasm/src/ast/: argument.rs  instruction.rs  label.rs  line.rs  literal.rs  mod.rs  program.rs  register.rs
attasm/src/parser/: att.pest  macros.rs  mod.rs
docs/: Presentation.odp
examples/: loop.S  loop.desugared.S  loop.ka  pow.S  pow.desugared.S  pow.ka
kappa/: Cargo.toml
kappa-ast/: Cargo.toml
kappa-ast/src/: lib.rs
kappa/src/: init.rs  lib.rs  link.rs  macros.rs  obs.rs  pattern.rs  site.rs  state.rs
kmachine-asm/: Cargo.toml
kmachine-asm/src/: att.rs  lib.rs
kmachine-kappa/: Cargo.toml
kmachine-kappa/src/: agent.rs  expression.rs  lib.rs  macros.rs  rule.rs
src/: agents.rs  compile.rs  inits.rs  macros.rs  main.rs  rules.rs  transformation.rs
src/asm/: att.pest  att.rs  mod.rs
src/kappa/: agent.rs  init.rs  macros.rs  mod.rs  obs.rs  pattern.rs  rule.rs  site.rs
